--- a/index.html
+++ b/index.html
@@ -3,33 +3,32 @@
 
 <head>
   <title>Sep Bauwens</title>
+  <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 
 <body>
-<h1>Woooooowww</h1>
-
+<h1><p><font color="red">Wooooooowww!!!</font></p></h1>
 
 <ul>
 	<h2>Mijn Hobby's</h2>
 <ul>
-	<h4>1. Voetballen</h4>
-	<h4>2. Gamen</h4>
-	<h4>3. Slapen</h4>
+	<ul>1.<a href="https://nl.wikipedia.org/wiki/Voetbal" >Voetballen </a> </ul>
+	<ul>2.<a href="https://nl.wikipedia.org/wiki/Computerspel" >Gamen </a> </ul>
+	<ul>3.<a href="https://nl.wikipedia.org/wiki/Slaap_(rust)" >Slapen </a> </ul>
 </ul>
 
 	<h2>Mijn Favorite Series</h2>
 <ul>
-	<h4>1. Game of Thrones</h4>
-	<h4>2. Black Mirror</h4>
-	<h4>3. Brooklyn 99</h4>
+	<li>1. Game of Thrones</h4>
+	<li>2. Black Mirror</h4>
+	<li>3. Brooklyn 99</h4>
 </ul>
 
 	<h2>Wooooooowww</h2>
 </body>
 
-<img class="fit-picture"
-     src="andrew-ridley-Kt5hRENuotI-unsplash.jpg"
-     alt="mooi hoor">
+<img src="andrew-ridley-Kt5hRENuotI-unsplash.jpg">
 </img>
+
 
 </html>
